--- a/package.json
+++ b/package.json
@@ -6,9 +6,30 @@
   "author": "Jason Sperske",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "build": "node ./node_modules/gulp-cli/bin/gulp.js",
+    "buildWatch": "node ./node_modules/gulp-cli/bin/gulp.js watch",
+    "start": "node ."
+  },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
-    "express-ejs-layouts": "^2.5.0"
+    "express-ejs-layouts": "^2.5.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "gulp": "*",
+    "gulp-babel": "^8.0.0-beta.2",
+    "gulp-clean-css": "*",
+    "gulp-concat": "*",
+    "gulp-flatten": "*",
+    "gulp-rename": "*",
+    "gulp-sass": "*",
+    "gulp-terser": "*"
   }
 }
