--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "start": "node ."
   },
   "dependencies": {
-    "bootstrap": "^4.4.1",
-    "ejs": "^3.0.1",
+    "bootstrap": "^4.5.2",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
+    "lity": "^2.4.1",
     "popper.js": "^1.16.0"
   },
   "devDependencies": {
